--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,38 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"><![CDATA[
-    android:orientation=" vertical “
-
-    />
-
-
-
-
-    ]]>
-
-    <Button
-        android:id="@+id/Login"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:text="כניסה ללקוחות רשומים"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="92dp"
-        tools:layout_editor_absoluteY="204dp"
-        tools:visibility="visible" />
-
-    <Button
-        android:id="@+id/Register"
-        android:layout_width="147dp"
-        android:layout_height="79dp"
-        android:layout_weight="1"
-        android:text="הרשמה"
-        app:layout_constraintEnd_toEndOf="@+id/Login"
-        app:layout_constraintStart_toStartOf="@+id/Login"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="417dp"
-        tools:visibility="visible" />
+    tools:context=".Login_Activity">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
