--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login_Activity">
+    <include layout="@layout/toolbar"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
