--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Register_Activity">
+    <include layout="@layout/toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
