--- a/app/src/main/res/layout/activity_institute_main.xml
+++ b/app/src/main/res/layout/activity_institute_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="InstitueActivity.InstituteMain">
+    tools:context="com.InstitueActivity.InstituteMain">
 
     <TextView
         android:id="@+id/welcome_institute"
