--- a/app/src/main/res/layout/activity_register_institute.xml
+++ b/app/src/main/res/layout/activity_register_institute.xml
@@ -10,18 +10,19 @@
     <include layout="@layout/toolbar" />
 
     <EditText
-        android:id="@+id/user_user_name_input_register_institute"
+        android:id="@+id/user_ID_input_register_institute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#DAC4DD"
         android:ems="10"
-        android:hint="שם משתמש"
+        android:hint="מספר רישוי המכון"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/contact_in_text_view_institute"
         app:layout_constraintEnd_toEndOf="@+id/user_first_name_input_register_institute"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_first_name_input_register_institute"
         app:layout_constraintTop_toBottomOf="@+id/user_first_name_input_register_institute"
-        app:layout_constraintVertical_bias="0.152" />
+        app:layout_constraintVertical_bias="0.423" />
 
     <TextView
         android:id="@+id/contact_in_text_view_institute"
@@ -31,10 +32,11 @@
         android:textColor="#150101"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/address_in_text_view_institute"
-        app:layout_constraintEnd_toEndOf="@+id/address_in_text_view_institute"
-        app:layout_constraintStart_toStartOf="@+id/address_in_text_view_institute"
-        app:layout_constraintTop_toBottomOf="@+id/personal_in_text_view_institute"
-        app:layout_constraintVertical_bias="0.535" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/personal_in_text_view_institute"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view_institute"
+        app:layout_constraintVertical_bias="0.552" />
 
     <TextView
         android:id="@+id/personal_in_text_view_institute"
@@ -46,7 +48,7 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/address_in_text_view_institute"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/address_in_text_view_institute"
         app:layout_constraintTop_toTopOf="@+id/fill_in_text_view_institute"
         app:layout_constraintVertical_bias="0.0" />
@@ -60,10 +62,10 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/fill_in_text_view_institute"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/fill_in_text_view_institute"
         app:layout_constraintTop_toBottomOf="@+id/fill_in_text_view_institute"
-        app:layout_constraintVertical_bias="0.638" />
+        app:layout_constraintVertical_bias="0.529" />
 
     <EditText
         android:id="@+id/user_house_number_input_register_institute"
@@ -151,11 +153,11 @@
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/user_living_city_input_register_institute"
-        app:layout_constraintEnd_toEndOf="@+id/user_user_name_input_register_institute"
+        app:layout_constraintEnd_toEndOf="@+id/user_ID_input_register_institute"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/user_user_name_input_register_institute"
+        app:layout_constraintStart_toStartOf="@+id/user_ID_input_register_institute"
         app:layout_constraintTop_toBottomOf="@+id/contact_in_text_view_institute"
-        app:layout_constraintVertical_bias="0.046" />
+        app:layout_constraintVertical_bias="0.052" />
 
     <EditText
         android:id="@+id/user_living_city_input_register_institute"
@@ -184,7 +186,7 @@
         app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_house_number_input_register_institute"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.612" />
 
     <EditText
         android:id="@+id/user_password_input_register_institute"
@@ -203,16 +205,16 @@
         android:id="@+id/user_phone_input_register_institute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="39dp"
+        android:layout_marginBottom="36dp"
         android:background="#DAC4DD"
         android:ems="10"
         android:hint="050-5555555"
         android:inputType="phone"
-        app:layout_constraintBottom_toTopOf="@+id/user_password_input_register_institute"
+        app:layout_constraintBottom_toBottomOf="@+id/user_password_input_register_institute"
         app:layout_constraintEnd_toEndOf="@+id/user_email_input_register_institute"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_email_input_register_institute"
-        app:layout_constraintTop_toBottomOf="@+id/user_user_name_input_register_institute"
-        app:layout_constraintVertical_bias="0.907" />
+        app:layout_constraintTop_toTopOf="@+id/user_email_input_register_institute" />
 
     <ProgressBar
         android:id="@+id/user_progress_bar_institute"
@@ -224,7 +226,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_user_name_input_register_institute"
+        app:layout_constraintTop_toBottomOf="@+id/user_ID_input_register_institute"
         app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
