--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,54 +13,31 @@
         layout="@layout/toolbar" />
 
     <TextView
-        android:id="@+id/welcome_text"
+        android:id="@+id/welcome_text_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ברוכים הבאים !"
         android:textSize="40dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.777"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122" />
+        app:layout_constraintVertical_bias="0.159" />
 
     <ImageView
         android:id="@+id/login_icon"
         android:layout_width="343dp"
         android:layout_height="168dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.779"
+        android:layout_marginTop="87dp"
+        app:layout_constraintBottom_toTopOf="@+id/register_button_login"
+        app:layout_constraintEnd_toEndOf="@+id/LOGIN_Button"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/LOGIN_Button"
+        app:layout_constraintTop_toTopOf="@+id/LOGIN_Button"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/login_icon" />
-
-    <TextView
-        android:id="@+id/user_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="אי-מייל"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/welcome_text"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
-        app:layout_constraintVertical_bias="0.038" />
-
-    <TextView
-        android:id="@+id/user_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="סיסמא"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/user_email_input"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/user_email_input"
-        app:layout_constraintTop_toBottomOf="@+id/user_email_input"
-        app:layout_constraintVertical_bias="0.024" />
 
     <Button
         android:id="@+id/LOGIN_Button"
@@ -68,14 +45,14 @@
         android:layout_height="66dp"
         android:text="התחברות"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/login_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_password"
-        app:layout_constraintVertical_bias="0.76" />
+        app:layout_constraintTop_toBottomOf="@+id/user_password_input_login"
+        app:layout_constraintVertical_bias="0.146" />
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/register_button_login"
         android:layout_width="144dp"
         android:layout_height="89dp"
         android:text="לא רשומים עדין !? לחצו כאן להרשמה"
@@ -87,31 +64,44 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <EditText
-        android:id="@+id/user_email_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Email(bob@gmail.com)"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/user_email"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/user_email"
-        app:layout_constraintTop_toBottomOf="@+id/user_email"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <EditText
-        android:id="@+id/user_password_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/user_password_input_login"
+        android:layout_width="202dp"
+        android:layout_height="42dp"
+        android:background="#DAC4DD"
         android:ems="10"
         android:hint="סיסמא (123456789)"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/LOGIN_Button"
-        app:layout_constraintEnd_toEndOf="@+id/user_password"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text_login"
+        app:layout_constraintVertical_bias="0.234" />
+
+    <EditText
+        android:id="@+id/user_ID_input_login"
+        android:layout_width="202dp"
+        android:layout_height="42dp"
+        android:background="#DAC4DD"
+        android:ems="10"
+        android:hint="ת.ז או מספר רישוי מכון"
+        android:inputType="textPersonName"
+        android:textColorLink="#E8D4D4"
+        app:layout_constraintBottom_toTopOf="@+id/user_password_input_login"
+        app:layout_constraintEnd_toEndOf="@+id/user_password_input_login"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/user_password"
-        app:layout_constraintTop_toBottomOf="@+id/user_password"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="@+id/user_password_input_login"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text_login" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="85dp"
+        android:layout_height="87dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/LOGIN_Button"
+        app:layout_constraintEnd_toStartOf="@+id/welcome_text_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
