--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,50 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".entryActivities.Main_Activity"
-    android:background="@drawable/pale_blue_background">
+    android:background="@drawable/pale_blue_background"
+    tools:context=".entryActivities.Main_Activity">
 
 
     <TextView
-        android:layout_width="270dp"
-        android:layout_height="108dp"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="דימות בקלות"
 
+        android:text="דימות בקלות"
         android:textSize="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.136" />
+        app:layout_constraintVertical_bias="0.124" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="196dp"
+        android:layout_width="200dp"
         android:layout_height="84dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="102dp"
         android:text="כניסה למשתמשים רשומים"
         android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/register_button_login"
+        app:layout_constraintEnd_toEndOf="@+id/register_button_login"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/register_button_login"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.394" />
+        app:layout_constraintVertical_bias="0.94" />
 
     <Button
-        android:id="@+id/register_button"
-        android:layout_width="203dp"
+        android:id="@+id/register_button_login"
+        android:layout_width="200dp"
         android:layout_height="84dp"
         android:layout_gravity="center"
+        android:layout_marginTop="144dp"
         android:text="הרשמה"
         android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="365dp"
+        android:layout_height="336dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.552" />
+        app:layout_constraintVertical_bias="0.959"
+        app:srcCompat="@drawable/brain_mri_icon" />
+
+    <Button
+        android:id="@+id/conect_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="צור קשר"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="11dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
