--- a/app/src/main/res/layout/activity_institute_main.xml
+++ b/app/src/main/res/layout/activity_institute_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.InstitueActivity.InstituteMain">
+    tools:context=".InstituteActivity.InstituteMain">
+
+    <include android:id="@+id/include" layout="@layout/toolbar" />
 
     <TextView
         android:id="@+id/welcome_institute"
@@ -12,8 +14,9 @@
         android:layout_height="75dp"
         android:text="ברוך הבא מכון"
         android:textSize="36sp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="76dp" />
+        tools:layout_editor_absoluteY="108dp" />
 
     <TextView
         android:id="@+id/name_institute"
@@ -21,8 +24,10 @@
         android:layout_height="80sp"
         android:text=""
         android:textSize="50sp"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintEnd_toEndOf="@+id/welcome_institute"
+        app:layout_constraintStart_toStartOf="@+id/welcome_institute"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_institute"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/watch_queue"
@@ -31,15 +36,31 @@
         android:text="צפיה בתורים"
         android:textSize="25sp"
         tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="418dp" />
+        tools:layout_editor_absoluteY="334dp"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/update_queue"
         android:layout_width="197dp"
         android:layout_height="90dp"
+        android:layout_marginTop="48dp"
         android:text="עדכון תורים"
         android:textSize="25sp"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="553dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/watch_queue"
+        app:layout_constraintEnd_toEndOf="@+id/watch_queue"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/watch_queue"
+        app:layout_constraintTop_toBottomOf="@+id/watch_queue"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/instData"
+        android:layout_width="107dp"
+        android:layout_height="62dp"
+        android:text="איזור אישי"
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="618dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
