--- a/app/src/main/res/layout/activity_watching_queue.xml
+++ b/app/src/main/res/layout/activity_watching_queue.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@color/purple_500"
 
-    tools:context=".WatchingQueueActivity">
+    tools:context=".InstituteActivity.WatchingQueueActivity">
 
 <TableLayout
     android:layout_width="match_parent"
