--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:id="@+id/conect_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="צור קשר"
+        android:text="test_Button_temp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="11dp" />
 
