--- a/app/src/main/res/layout/activity_main_register.xml
+++ b/app/src/main/res/layout/activity_main_register.xml
@@ -15,49 +15,46 @@
         android:id="@+id/main_Register_Login"
         android:layout_width="373dp"
         android:layout_height="271dp"
+        android:layout_marginTop="140dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.981"
-        app:srcCompat="@drawable/main_register_icon_choose"
-        android:contentDescription="TODO" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.457"
+        app:srcCompat="@drawable/main_register_icon_choose" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="318dp"
         android:layout_height="155dp"
-        app:layout_constraintBottom_toTopOf="@+id/main_Register_Login"
+        android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202"
-        app:srcCompat="@drawable/main_register_icon_register_now"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.104"
+        app:srcCompat="@drawable/main_register_icon_register_now" />
 
     <Button
         android:id="@+id/institute_register_button"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:text="להרשמה בתור מכון, לחץ כאן"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.439" />
+        app:layout_constraintBottom_toTopOf="@+id/main_Register_Login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/patient_register_button"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/patient_register_button"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:text="להרשמה בתור פציאנט, לחץ כאן"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.439" />
+        app:layout_constraintBottom_toTopOf="@+id/main_Register_Login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.149"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
