--- a/app/src/main/res/layout/activity_patient_register.xml
+++ b/app/src/main/res/layout/activity_patient_register.xml
@@ -32,9 +32,25 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/address_in_text_view_patient"
         app:layout_constraintEnd_toEndOf="@+id/address_in_text_view_patient"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/address_in_text_view_patient"
-        app:layout_constraintTop_toBottomOf="@+id/personal_in_text_view_patient"
-        app:layout_constraintVertical_bias="0.535" />
+        app:layout_constraintTop_toBottomOf="@+id/personal_in_text_view_patient" />
+
+    <TextView
+        android:id="@+id/contact_in_text_view_password_guide_patient"
+        android:layout_width="379dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="24dp"
+        android:text="הכנס סיסמא בת 9 תוים, התו הראשון יהיה האות p , סך הכול 10 תוים"
+        android:textColor="#150101"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/user_password_input_register_patient"
+        app:layout_constraintEnd_toEndOf="@+id/address_in_text_view_patient"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/address_in_text_view_patient"
+        app:layout_constraintTop_toTopOf="@+id/user_phone_input_register_patient"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/user_age_input_register_patient"
@@ -74,10 +90,10 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/fill_in_text_view_patient"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/fill_in_text_view_patient"
         app:layout_constraintTop_toBottomOf="@+id/fill_in_text_view_patient"
-        app:layout_constraintVertical_bias="0.638" />
+        app:layout_constraintVertical_bias="0.683" />
 
     <EditText
         android:id="@+id/user_house_number_input_register_patient"
@@ -182,7 +198,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_ID_input_register_patient"
         app:layout_constraintTop_toBottomOf="@+id/contact_in_text_view_patient"
-        app:layout_constraintVertical_bias="0.046" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/user_living_city_input_register_patient"
@@ -207,11 +223,9 @@
         android:layout_height="69dp"
         android:text="הרשם !"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintEnd_toStartOf="@+id/user_house_number_input_register_patient"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_house_number_input_register_patient"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintTop_toBottomOf="@+id/address_in_text_view_patient" />
 
     <EditText
         android:id="@+id/user_password_input_register_patient"
@@ -227,12 +241,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_email_input_register_patient"
         app:layout_constraintTop_toBottomOf="@+id/user_age_input_register_patient"
-        app:layout_constraintVertical_bias="0.64" />
+        app:layout_constraintVertical_bias="0.753" />
 
     <EditText
         android:id="@+id/user_phone_input_register_patient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="#DAC4DD"
         android:ems="10"
         android:hint="050-5555555"
@@ -241,8 +256,8 @@
         app:layout_constraintEnd_toEndOf="@+id/user_password_input_register_patient"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_password_input_register_patient"
-        app:layout_constraintTop_toTopOf="@+id/user_ID_input_register_patient"
-        app:layout_constraintVertical_bias="0.934" />
+        app:layout_constraintTop_toTopOf="@+id/user_email_input_register_patient"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:id="@+id/progres_bar_patient"
