--- a/app/src/main/res/layout/activity_register_institute.xml
+++ b/app/src/main/res/layout/activity_register_institute.xml
@@ -7,6 +7,18 @@
     android:background="@drawable/pale_blue_background"
     tools:context=".entryActivities.Register_Institute_Activity">
 
+    <TextView
+        android:id="@+id/contact_in_text_view_password_guide_institute"
+        android:layout_width="374dp"
+        android:layout_height="51dp"
+        android:text="הכנס סיסמא בת 9 תוים, התו הראשון יהיה האות i , סך הכול 10 תוים"
+        android:textColor="#150101"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/user_password_input_register_institute"
+        app:layout_constraintEnd_toEndOf="@+id/address_in_text_view_institute"
+        app:layout_constraintStart_toStartOf="@+id/address_in_text_view_institute"
+        app:layout_constraintTop_toBottomOf="@+id/user_phone_input_register_institute" />
+
     <include
         android:id="@+id/include5"
         layout="@layout/toolbar" />
@@ -38,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/personal_in_text_view_institute"
         app:layout_constraintTop_toBottomOf="@+id/welcome_text_view_institute"
-        app:layout_constraintVertical_bias="0.552" />
+        app:layout_constraintVertical_bias="0.51" />
 
     <TextView
         android:id="@+id/personal_in_text_view_institute"
@@ -64,10 +76,10 @@
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/fill_in_text_view_institute"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/fill_in_text_view_institute"
         app:layout_constraintTop_toBottomOf="@+id/fill_in_text_view_institute"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="0.597" />
 
     <EditText
         android:id="@+id/user_house_number_input_register_institute"
@@ -159,7 +171,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_ID_input_register_institute"
         app:layout_constraintTop_toBottomOf="@+id/contact_in_text_view_institute"
-        app:layout_constraintVertical_bias="0.052" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/user_living_city_input_register_institute"
@@ -200,8 +212,10 @@
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/user_living_city_input_register_institute"
         app:layout_constraintEnd_toEndOf="@+id/user_phone_input_register_institute"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_phone_input_register_institute"
-        app:layout_constraintTop_toBottomOf="@+id/user_email_input_register_institute" />
+        app:layout_constraintTop_toBottomOf="@+id/user_email_input_register_institute"
+        app:layout_constraintVertical_bias="0.684" />
 
     <EditText
         android:id="@+id/user_phone_input_register_institute"
@@ -215,8 +229,10 @@
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="@+id/user_password_input_register_institute"
         app:layout_constraintEnd_toEndOf="@+id/user_email_input_register_institute"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/user_email_input_register_institute"
-        app:layout_constraintTop_toTopOf="@+id/user_email_input_register_institute" />
+        app:layout_constraintTop_toTopOf="@+id/user_email_input_register_institute"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:id="@+id/user_progress_bar_institute"
@@ -231,4 +247,4 @@
         app:layout_constraintTop_toBottomOf="@+id/user_ID_input_register_institute"
         app:layout_constraintVertical_bias="0.0" />
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
