--- a/app/src/main/res/layout/activity_e_mail__varification.xml
+++ b/app/src/main/res/layout/activity_e_mail__varification.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.151" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/email_verification_image"
         android:layout_width="245dp"
         android:layout_height="239dp"
         android:layout_marginTop="265dp"
@@ -30,6 +30,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/email_verification_text_thread"
-        app:layout_constraintVertical_bias="0.042"
+        app:layout_constraintVertical_bias="0.386"
         app:srcCompat="@drawable/email_icon" />
+
+    <Button
+        android:id="@+id/email_verification_move_to_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="224dp"
+        android:text="למעבר לעמוד ההתחברות לחצו כאן"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/email_verification_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/email_verification_text_thread"
+        app:layout_constraintVertical_bias="0.333" />
 </androidx.constraintlayout.widget.ConstraintLayout>
